# simple_ping_lds

./: CMakeLists.txt  Makefile  README.md  ping_lds
src/headers/: main.hpp
src/sources/: main.cpp
